RESOLVED FIXED129512
Web Inspector: ASSERT in WebCore::JSDOMWindowBase::supportsRichSourceInfo inspecting iOS
https://bugs.webkit.org/show_bug.cgi?id=129512
Summary Web Inspector: ASSERT in WebCore::JSDOMWindowBase::supportsRichSourceInfo ins...
Joseph Pecoraro
Reported 2014-02-28 15:43:11 PST
After moving to the new remote inspector path, we no longer enable/disable DeveloperExtras on iOS and we hit this ASSERT.
Attachments
[PATCH] Proposed Fix (2.09 KB, patch)
2014-02-28 15:45 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-28 15:43:33 PST
Joseph Pecoraro
Comment 2 2014-02-28 15:45:27 PST
Created attachment 225502 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2014-02-28 16:36:56 PST
Comment on attachment 225502 [details] [PATCH] Proposed Fix Clearing flags on attachment: 225502 Committed r164896: <http://trac.webkit.org/changeset/164896>
WebKit Commit Bot
Comment 4 2014-02-28 16:36:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.