Web Inspector: ASSERT in WebCore::JSDOMWindowBase::supportsRichSourceInfo inspecting iOS https://bugs.webkit.org/show_bug.cgi?id=129512

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-02-28
Reviewed by Simon Fraser.

* page/PageDebuggable.cpp:
(WebCore::PageDebuggable::connect):
(WebCore::PageDebuggable::disconnect):

Canonical link: https://commits.webkit.org/147578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164896 268f45cc-cd09-0410-ab3c-d52691b4dbfc